@@ -1,3 +1,8 @@
+2003-09-26  Chris Schwerdt <muti@afterglo.ws> 1.4.1-cvs-b99
+
+	* Added support to disable auto rotate on add-item in gallery
+	  remote.
+
 2003-09-26  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b98
 
 	* Change: Use $borderColor instead of white when album_thumb_frame_style="dots"
